// Copyright (c) 2022-2023, Zander Schwid & Co. LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "pkg/pb";
option java_multiple_files = true;
option java_package = "com.codeallergy";
option java_outer_classname = "LightTemplateProtos";
option objc_class_prefix = "LTP";

package lighttemplate;

enum UserRole {
    USER = 0;
    ADMIN = 1;
}

// %s:user
message UserEntity {
    string  user_id = 1;
    bytes   password_hash = 2;
    string  first_name = 3;
    string  middle_name = 4;
    string  last_name = 5;
    string  email = 6;
    int64   cre_timestamp = 10;
    UserRole role = 11;
}

// recover:email:%s
message RecoverCodeEntity {
    string code = 1;
    string remote_ip = 2;
    int64  cre_timestamp = 3;
}

// %s:user:security_log:%s
message SecurityLogEntity {
    string  event_name = 1;
    int64   event_time = 2;
    string  remote_ip = 3;
    string  user_agent = 4;
}

enum ContentType {
    MARKDOWN = 0;
    HTML = 1;
}

// page:%s
message PageEntity {
    string  name = 1;
    string  title = 2;
    string  content = 3;
    int64   cre_timestamp = 4;
    ContentType content_type = 5;
}

